dataset1235/2025-2/805158916/users/402682394/executions/2651470117_3921830315.log
== SUBMISSION (2025-08-15 02:01:49)
-- CODE: 
L = float(input("Quantos litros foram abastecidos? "))

Total = 2.86*L*1.34

print(round(Total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Quantos litros foram abastecidos? 39.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Quantos litros foram abastecidos? 567.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Quantos litros foram abastecidos? 191.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Quantos litros foram abastecidos? 334.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Quantos litros foram abastecidos? 912.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Quantos litros foram abastecidos? 163.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 02:03:57)
-- CODE: 
L = float(input("Quantos litros foram abastecidos? "))

Total = 2.86*L*1.34+50

print(round(Total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Quantos litros foram abastecidos? 89.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Quantos litros foram abastecidos? 617.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Quantos litros foram abastecidos? 241.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Quantos litros foram abastecidos? 384.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Quantos litros foram abastecidos? 962.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Quantos litros foram abastecidos? 213.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:01:32)
-- CODE: 
L = float(input("Quantos litros foram abastecidos? "))

Total = 2.86*L*1.34

print(round(Total,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 5
    print(round(Total,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 5
    print(round(Total,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 5
    print(round(Total,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 5
    print(round(Total,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 5
    print(round(Total,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 5
    print(round(Total,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 02:05:00)
-- CODE: 
L = float(input("Quantos litros foram abastecidos? "))

Total = 2.86*L+50

print(round(Total*1.34,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Quantos litros foram abastecidos? 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Quantos litros foram abastecidos? 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Quantos litros foram abastecidos? 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Quantos litros foram abastecidos? 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Quantos litros foram abastecidos? 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Quantos litros foram abastecidos? 230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:04:53)
-- CODE: 
L = float(input("Quantos litros foram abastecidos? "))

Total = 2.86*L+50

print(round(Total*1.34,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Quantos litros foram abastecidos? 106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Quantos litros foram abastecidos? 634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Quantos litros foram abastecidos? 258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Quantos litros foram abastecidos? 401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Quantos litros foram abastecidos? 979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Quantos litros foram abastecidos? 230.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:01:38)
-- CODE: 
L = float(input("Quantos litros foram abastecidos? "))

Total = 2.86*L*1.34

print(round(Total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Quantos litros foram abastecidos? 39.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Quantos litros foram abastecidos? 567.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Quantos litros foram abastecidos? 191.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Quantos litros foram abastecidos? 334.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Quantos litros foram abastecidos? 912.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Quantos litros foram abastecidos? 163.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:03:13)
-- CODE: 
L = float(input("Quantos litros foram abastecidos? "))

Total = 2.86*L*1.34

print(round(Total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
Quantos litros foram abastecidos? 39.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
Quantos litros foram abastecidos? 567.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
Quantos litros foram abastecidos? 191.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
Quantos litros foram abastecidos? 334.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
Quantos litros foram abastecidos? 912.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
Quantos litros foram abastecidos? 163.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:04:44)
-- CODE: 
L = float(input("Quantos litros foram abastecidos? "))

Total = 2.86*L+50

print(round(Total*1,34,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(Total*1,34,2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: round() takes at most 2 arguments (3 given)
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(Total*1,34,2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: round() takes at most 2 arguments (3 given)
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(Total*1,34,2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: round() takes at most 2 arguments (3 given)
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(Total*1,34,2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: round() takes at most 2 arguments (3 given)
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(Total*1,34,2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: round() takes at most 2 arguments (3 given)
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(Total*1,34,2))
          ^^^^^^^^^^^^^^^^^^^
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
